--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Meu portifolio</title>
 </head>
 <body>
+  <header Class="container">
    <img src="img/avatar-perfil.png" alt="avatar do matheus" srcset=""> 
    <p>Eu sou o joseph_</p>
    <h1>Eu ensino programaçao</h1>
@@ -23,6 +24,6 @@
           <p>Scratch</p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
+      </header>
 </body>
 </html>
