--- a/index.html
+++ b/index.html
@@ -25,19 +25,45 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       </header>
-      <main class="container">
+      <main class="container mt-5">
         <h2>meus projetos</h2>
         <div class="row">
+          <!-- projto 1 -->
           <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card" >
+              <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto de bibliotca virtual">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                <p class="card-text">ste projeto é uma página web que apresenta uma lista dos meus livros favoritos, incluindo informações sobre os autores, datas de publicação e links para compra na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts.
+               </p>
+                <button type="button" class="btn btn-link">veja meu projeto</button>
               </div>
             </div>-
           </div>
+        </div>
+           <!-- projto 2 -->
+        <div class="col-md-4">
+          <div class="card" >
+            <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto de bibliotca virtual">
+            <div class="card-body">
+              <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+              <p class="card-text">ste projeto é uma página web que apresenta uma lista dos meus livros favoritos, incluindo informações sobre os autores, datas de publicação e links para compra na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts.
+             </p>
+              <button type="button" class="btn btn-link">veja meu projeto</button>
+            </div>
+          </div>-
+        </div>
+           <!-- projto 3 -->
+        <div class="col-md-4">
+          <div class="card" >
+            <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto de bibliotca virtual">
+            <div class="card-body">
+              <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+              <p class="card-text">ste projeto é uma página web que apresenta uma lista dos meus livros favoritos, incluindo informações sobre os autores, datas de publicação e links para compra na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts.
+             </p>
+              <button type="button" class="btn btn-link">veja meu projeto</button>
+            </div>
+          </div>-
         </div>
 
       </main>
